--- a/bin/index.html
+++ b/bin/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>PixiVideoTest</title>
 	<style>
-		html, body, div {
+		html, body,  {
 			margin: 0; padding: 0; width: 100%; height: 100%;
 			-webkit-touch-callout: none !important;
 			-webkit-user-select: none !important;
@@ -14,6 +14,26 @@
 			-moz-user-select: none !important;
 			-ms-user-select: none !important;
 			user-select: none !important;
+		}
+		#app {
+			position: relative;
+			display: block;
+			float: right;
+			width: 800px; height: 600px;
+			margin: 0;
+			padding: 0;
+			width: 100%; height: 100%;
+		}
+		#menu {
+			position: relative;
+			display: block;
+			width: 200px; height: 500px;
+			float: left;
+		}
+		#content {
+			position: relative;
+			display: block;
+
 		}
 	</style>
 	<script src="app.js" type="text/javascript"></script>
@@ -26,7 +46,12 @@
 	</script>
 </head>
 <body>
-	<h2>Header</h2>
-	<div id="app"></div>
+	<div id="menu">
+		123<br/>456
+	</div>
+	<div id="content">
+		<h2>Header</h2>
+		<div id="app"></div>
+	</div>
 </body>
 </html>
